// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vwo-cloud's identifyUser destination action: all fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_syncVisitorProp",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "segment.testType": "sl#5^du3V5b#Q5V",
            "vwo_fs_environment": "sl#5^du3V5b#Q5V",
          },
        },
        "isCustomEvent": true,
        "page": Object {
          "testType": "sl#5^du3V5b#Q5V",
        },
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": 1683296328970,
    },
    "msgId": "6F1CE6652B2D59948041CF9788B16CB0-1683296328",
    "sessionId": 1683296328,
    "visId": "6F1CE6652B2D59948041CF9788B16CB0",
    "visitor": Object {
      "props": Object {
        "segment.testType": "sl#5^du3V5b#Q5V",
        "vwo_fs_environment": "sl#5^du3V5b#Q5V",
      },
    },
  },
}
`;

exports[`Testing snapshot for actions-vwo-cloud's identifyUser destination action: required fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_syncVisitorProp",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "segment.testType": "sl#5^du3V5b#Q5V",
            "vwo_fs_environment": "sl#5^du3V5b#Q5V",
          },
        },
        "isCustomEvent": true,
        "page": Object {},
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": 1683296328905,
    },
    "msgId": "6F1CE6652B2D59948041CF9788B16CB0-1683296328",
    "sessionId": 1683296328,
    "visId": "6F1CE6652B2D59948041CF9788B16CB0",
    "visitor": Object {
      "props": Object {
        "segment.testType": "sl#5^du3V5b#Q5V",
        "vwo_fs_environment": "sl#5^du3V5b#Q5V",
      },
    },
  },
}
`;
